--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,32 @@
-# Copy this file to `.env` and fill in your values
-# These are consumed by app.config.js via dotenv at build time
 
-# Firebase config (also present in google-services.json / GoogleService-Info.plist for native)
+# Firebase API Key
 FIREBASE_API_KEY=
+
+# Firebase Auth Domain (not explicitly found in google-services.json, but inferred)
 FIREBASE_AUTH_DOMAIN=
+
+# Firebase Project ID
 FIREBASE_PROJECT_ID=
+
+# Firebase Storage Bucket
 FIREBASE_STORAGE_BUCKET=
+
+# Firebase Messaging Sender ID (Project Number)
 FIREBASE_MESSAGING_SENDER_ID=
+
+# Firebase App ID
 FIREBASE_APP_ID=
 
-# Google Sign-In: REQUIRED for offline access and proper sign-in on native
-# Provide the OAuth 2.0 Client ID of type "Web application" from Google Cloud console (same project as your iOS/Android clients)
-GOOGLE_WEB_CLIENT_ID=
-
-# Optional: Maps (Android)
+# Google Maps API Key
 GOOGLE_MAPS_API_KEY=
 
-# Build metadata
+# Google Sign-In (oauth)
+GOOGLE_WEB_CLIENT_ID=
+
+# Github Personal Access Token (PAT) for repo
+GH_TOKEN=
+
+# Local development only
+APP_VERSION=
+BUILD_NUMBER=
 BUILD_DATE=
