--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
   "dependencies": {
     "@dev-plugins/react-navigation": "^0.3.1",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^1.23.0",
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/auth": "^22.2.1",
     "@react-native-firebase/messaging": "^22.2.1",
     "@react-native-google-signin/google-signin": "^15.0.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "babel-preset-expo": "~13.0.0",
     "dotenv": "^16.5.0",
     "expo": "53.0.12",
-    "expo-background-fetch": "^13.1.5",
+    "expo-background-task": "~1.0.6",
     "expo-battery": "^9.1.4",
     "expo-build-properties": "^0.14.6",
     "expo-camera": "^16.1.8",
