refactor(scripts): update build pipeline and dependencies
- Reorganize build scripts to use unified prepare command
- Move react-native-exception-handler to proper dependency order
- Update script execution flow for better reliability
- Remove deprecated build script references

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "expo start",
-    "prebuild": "node scripts/setupExceptionHandler.js",
-    "eas-build-pre-install": "node scripts/setupExceptionHandler.js",
-    "android": "npm run prebuild && expo run:android",
+    "start": "npm run prepare && expo start",
+    "prepare": "node scripts/buildScripts.js",
+    "prebuild": "npm run prepare",
+    "eas-build-pre-install": "npm run prepare || echo 'prepare script failed'",
+    "android": "npm run prepare && expo run:android",
     "bump-version": "node scripts/bumpVersion.js",
-    "eas-build-preinstall": "node scripts/setupBatteryOptimization.js && node scripts/notificationSounds.js",
-    "ios": "npm run prebuild && expo run:ios",
+    "ios": "npm run prepare && expo run:ios",
     "web": "npm run prebuild && expo start --web",
     "test": "jest --watchAll",
     "postinstall": "node scripts/notificationSounds.js",
@@ -28,6 +28,7 @@
     "@react-native-firebase/messaging": "^22.2.1",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "react-native-exception-handler": "^2.10.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "babel-preset-expo": "~13.0.0",
@@ -60,7 +61,6 @@
     "react-dom": "19.1.0",
     "react-native": "0.79.4",
     "react-native-console-view": "^0.0.21",
-    "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.20.1",
