refactor(build): modernize build script configuration
- Update build-config.json to use new script structure
- Disable legacy setupExceptionHandler.js in favor of config plugin
- Improve buildScripts.js with better TypeScript support and error handling
- Add support for conditional script execution

--- a/scripts/build-config.json
+++ b/scripts/build-config.json
@@ -1,7 +1,6 @@
 {
       "scripts": [
-            "setupBatteryOptimizations.js",
-            "notificationSounds.ts",
-            "setupExceptionHandler.js"
+            "prepareGoogleServices.js",
+            { "path": "setupExceptionHandler.js", "enabled": false, "reason": "Replaced by config plugin nativeExceptionHandler.cjs" }
       ]
 }
