--- a/.gitignore
+++ b/.gitignore
@@ -38,12 +38,17 @@ yarn-error.*
 
 # Ignore the android google services config
 google-services.json
+google-services.auto.json
+google-services.env.json
 
 # Ignore the iOS Google Services config
 GoogleService-Info.plist
 
 # You can also ignore any .env files or other secrets
 *.env
+
+# VS Code settings with sensitive data
+.vscode/settings.json
 
 # Android / iOS Build Folders
 android/
