--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@react-native-firebase/messaging": "^22.2.1",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "react-native-exception-handler": "^2.10.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@sentry/react-native": "^6.22.0",
     "babel-preset-expo": "~13.0.0",
     "dotenv": "^16.5.0",
     "expo": "53.0.12",
@@ -61,6 +61,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.79.4",
     "react-native-console-view": "^0.0.21",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.20.1",
