--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "adb:connect": "./scripts/adb-connect.sh",
     "start": "npm run prepare && expo start",
     "prepare": "node scripts/buildScripts.js",
     "prebuild": "npm run prepare",
@@ -20,69 +21,69 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@dev-plugins/react-navigation": "^0.3.1",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.23.0",
-    "@react-native-firebase/app": "^22.2.1",
-    "@react-native-firebase/auth": "^22.2.1",
-    "@react-native-firebase/messaging": "^22.2.1",
-    "@react-native-google-signin/google-signin": "^15.0.0",
-    "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
-    "@sentry/react-native": "^6.22.0",
-    "babel-preset-expo": "~13.0.0",
-    "dotenv": "^16.5.0",
-    "expo": "53.0.12",
-    "expo-background-task": "~1.0.6",
-    "expo-battery": "^9.1.4",
-    "expo-build-properties": "^0.14.6",
-    "expo-camera": "^16.1.8",
-    "expo-cellular": "^7.1.4",
-    "expo-clipboard": "^7.1.4",
-    "expo-dev-client": "~5.2.1",
-    "expo-device": "^7.1.4",
-    "expo-font": "^13.3.1",
-    "expo-linking": "^7.1.5",
-    "expo-location": "^18.1.5",
-    "expo-media-library": "^17.1.7",
-    "expo-notifications": "^0.31.3",
-    "expo-router": "^5.1.0",
-    "expo-splash-screen": "^0.30.9",
-    "expo-status-bar": "^2.2.3",
-    "expo-system-ui": "~5.0.9",
-    "expo-task-manager": "^13.1.5",
-    "expo-web-browser": "~14.2.0",
-    "firebase": "^11.9.1",
-    "fs-extra": "^11.3.0",
-    "nativewind": "^4.1.23",
+    "@dev-plugins/react-navigation": "^0.4.0",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.8.3",
+    "@react-native-firebase/auth": "^23.8.3",
+    "@react-native-firebase/messaging": "^23.8.3",
+    "@react-native-google-signin/google-signin": "^16.1.1",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.10.1",
+    "@sentry/react-native": "^7.9.0",
+    "babel-preset-expo": "~54.0.9",
+    "dotenv": "^17.2.3",
+    "expo": "54.0.31",
+    "expo-background-task": "~1.0.10",
+    "expo-battery": "^10.0.8",
+    "expo-build-properties": "^1.0.10",
+    "expo-camera": "^17.0.10",
+    "expo-cellular": "8.0.8",
+    "expo-clipboard": "8.0.8",
+    "expo-dev-client": "6.0.20",
+    "expo-device": "8.0.10",
+    "expo-font": "14.0.10",
+    "expo-linking": "8.0.11",
+    "expo-location": "19.0.8",
+    "expo-media-library": "18.2.1",
+    "expo-notifications": "0.32.16",
+    "expo-router": "6.0.21",
+    "expo-splash-screen": "31.0.13",
+    "expo-status-bar": "3.0.9",
+    "expo-system-ui": "6.0.9",
+    "expo-task-manager": "14.0.9",
+    "expo-web-browser": "15.0.10",
+    "firebase": "12.8.0",
+    "fs-extra": "11.3.3",
+    "nativewind": "^4.2.1",
     "path": "^0.12.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.79.4",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-native": "0.83.1",
     "react-native-console-view": "^0.0.21",
     "react-native-exception-handler": "^2.10.10",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-get-random-values": "^1.11.0",
-    "react-native-maps": "1.20.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-gesture-handler": "~2.30.0",
+    "react-native-get-random-values": "^2.0.0",
+    "react-native-maps": "1.26.20",
+    "react-native-reanimated": "~4.2.1",
+    "react-native-safe-area-context": "5.6.2",
+    "react-native-screens": "^4.20.0",
+    "react-native-svg": "15.15.1",
+    "react-native-web": "^0.21.2",
+    "react-native-webview": "13.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.4",
+    "@babel/core": "^7.28.6",
     "@react-native-community/cli": "latest",
-    "@types/react": "^19.1.8",
+    "@types/react": "^19.2.8",
     "install": "^0.13.0",
-    "jest": "^30.0.0",
-    "jest-expo": "^53.0.7",
-    "react-test-renderer": "^19.1.0",
-    "semver": "^7.7.2",
-    "tailwindcss": "^4.1.10",
-    "typescript": "^5.8.3"
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.16",
+    "react-test-renderer": "^19.2.3",
+    "semver": "^7.7.3",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   },
   "workspaces": [
     "packages/*"
