Added ignore depracations flag.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "ignoreDeprecations": "6.0",
     "forceConsistentCasingInFileNames": true,
     // Path aliasing
     "baseUrl": ".",
