--- a/package.json
+++ b/package.json
@@ -29,26 +29,27 @@
     "@react-native-firebase/messaging": "^23.8.3",
     "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.10.1",
-    "@sentry/react-native": "^7.9.0",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.16",
+    "@sentry/react-native": "~7.2.0",
     "babel-preset-expo": "~54.0.9",
     "dotenv": "^17.2.3",
-    "expo": "54.0.31",
+    "expo": "~54.0.32",
     "expo-background-task": "~1.0.10",
     "expo-battery": "^10.0.8",
     "expo-build-properties": "^1.0.10",
     "expo-camera": "^17.0.10",
     "expo-cellular": "8.0.8",
     "expo-clipboard": "8.0.8",
+    "expo-constants": "~18.0.13",
     "expo-dev-client": "6.0.20",
     "expo-device": "8.0.10",
-    "expo-font": "14.0.10",
+    "expo-font": "~14.0.11",
     "expo-linking": "8.0.11",
     "expo-location": "19.0.8",
     "expo-media-library": "18.2.1",
     "expo-notifications": "0.32.16",
-    "expo-router": "6.0.21",
+    "expo-router": "~6.0.22",
     "expo-splash-screen": "31.0.13",
     "expo-status-bar": "3.0.9",
     "expo-system-ui": "6.0.9",
@@ -58,25 +59,27 @@
     "fs-extra": "11.3.3",
     "nativewind": "^4.2.1",
     "path": "^0.12.7",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "react-native": "0.83.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-console-view": "^0.0.21",
     "react-native-exception-handler": "^2.10.10",
-    "react-native-gesture-handler": "~2.30.0",
-    "react-native-get-random-values": "^2.0.0",
-    "react-native-maps": "1.26.20",
-    "react-native-reanimated": "~4.2.1",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "5.6.2",
-    "react-native-screens": "^4.20.0",
-    "react-native-svg": "15.15.1",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.2",
-    "react-native-webview": "13.16.0"
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.6",
     "@react-native-community/cli": "latest",
     "@types/react": "^19.2.8",
+    "babel-plugin-module-resolver": "^5.0.2",
     "install": "^0.13.0",
     "jest": "^30.2.0",
     "jest-expo": "^54.0.16",
