--- a/package.json
+++ b/package.json
@@ -59,8 +59,9 @@
     "fs-extra": "11.3.3",
     "nativewind": "^4.2.1",
     "path": "^0.12.7",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "tailwindcss": "^4.1.18",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-console-view": "^0.0.21",
     "react-native-exception-handler": "^2.10.10",
@@ -78,14 +79,11 @@
   "devDependencies": {
     "@babel/core": "^7.28.6",
     "@react-native-community/cli": "latest",
-    "@types/react": "^19.2.8",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
-    "install": "^0.13.0",
-    "jest": "^30.2.0",
+    "jest": "~29.7.0",
     "jest-expo": "^54.0.16",
-    "react-test-renderer": "^19.2.3",
     "semver": "^7.7.3",
-    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   },
   "workspaces": [
@@ -98,7 +96,8 @@
         "exclude": [
           "react-native-maps",
           "dotenv",
-          "firebase"
+          "firebase",
+          "react-native-exception-handler"
         ]
       }
     }
