Added gradle fix script.

--- a/scripts/build-config.json
+++ b/scripts/build-config.json
@@ -1,5 +1,6 @@
 {
       "scripts": [
+            "fixGradleWrapper.js",
             "prepareGoogleServices.js",
             { "path": "setupExceptionHandler.js", "enabled": false, "reason": "Replaced by config plugin nativeExceptionHandler.cjs" }
       ]
