--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "scheduler": "^0.26.0",
     "react-native-console-view": "^0.0.21",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~2.28.0",
