--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,18 @@ GH_TOKEN=
 APP_VERSION=
 BUILD_NUMBER=
 BUILD_DATE=
+
+# Google-Services.JSON
+GOOGLE_SERVICES_JSON_BASE64=
+
+# Expo LAN IP + Port
+REACT_NATIVE_PACKAGER_HOSTNAME=192.168.68.63
+EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
+
+# Google Sign-In Development Client ID (with debug SHA-1)
+GOOGLE_WEB_CLIENT_ID_DEV=
+
+
+#DO NOT COMMIT THIS
+SENTRY_AUTH_TOKEN=
+
