--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-cellular": "8.0.8",
     "expo-clipboard": "8.0.8",
     "expo-constants": "~18.0.13",
+    "expo-contacts": "~15.0.11",
     "expo-dev-client": "6.0.20",
     "expo-device": "8.0.10",
     "expo-font": "~14.0.11",
@@ -50,6 +51,7 @@
     "expo-media-library": "18.2.1",
     "expo-notifications": "0.32.16",
     "expo-router": "~6.0.22",
+    "expo-sms": "~14.0.8",
     "expo-splash-screen": "31.0.13",
     "expo-status-bar": "3.0.9",
     "expo-system-ui": "6.0.9",
@@ -59,11 +61,9 @@
     "fs-extra": "11.3.3",
     "nativewind": "^4.2.1",
     "path": "^0.12.7",
-    "tailwindcss": "^4.1.18",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "scheduler": "^0.26.0",
     "react-native-console-view": "^0.0.21",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~2.28.0",
@@ -75,7 +75,9 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.2",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.5.1"
+    "react-native-worklets": "^0.5.1",
+    "scheduler": "^0.26.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@babel/core": "^7.28.6",
