fix: Disable Sentry source map upload in CI builds
- Set SENTRY_DISABLE_AUTO_UPLOAD=true in build step
- Prevents auth token requirement during Gradle build
- Sentry upload can be enabled later with proper secrets if needed

This allows local builds to complete without Sentry authentication,
which would require additional GitHub secrets configuration.

--- a/.github/workflows/local-android-build.yml
+++ b/.github/workflows/local-android-build.yml
@@ -142,6 +142,8 @@ jobs:
             - name: '🏗️ Build Release APK with Gradle'
               run: |
                   export ANDROID_HOME="/home/digitalnomad91/Android/Sdk"
+                  # Disable Sentry source map upload in CI (requires auth token)
+                  export SENTRY_DISABLE_AUTO_UPLOAD=true
                   cd android
                   ./gradlew clean assembleRelease \
                     -x bundleRelease \
